fixed printing of parking history to be more readable

--- a/src/components/listallCars.module.css
+++ b/src/components/listallCars.module.css
@@ -8,7 +8,7 @@ form.addCar {
 ul {
     list-style-type: none;
 }
-li:before { content:"\2714\0020"; } 
+
 li{
     margin-bottom: 0.9em;
 }
