--- a/src/pages/user.module.css
+++ b/src/pages/user.module.css
@@ -30,11 +30,51 @@ div.userPage {
 /* Historia för parkering (kan fyllas med mer stil senare) */
 .parkingHistory {
   margin-bottom: 1rem;
+  list-style: none;
 }
 button.sortHistoryButton{
 font-weight: 500;
 margin-left: 70%;
 }
+
+.parkingGrid {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: auto auto;
+  gap: 5px;
+  align-items: center;
+  border-bottom: 1px solid var(--secondary-color);
+}
+
+.regPlate {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  font-weight: 600;
+  letter-spacing: 0.2em;
+  font-size: 1.1em;
+}
+
+.parkingFee {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  font-weight: 600;
+  letter-spacing: 0.2em;
+  font-size: 1.1em;
+}
+
+.parkingTime {
+  
+  grid-row: 1 / 3;
+  text-align: left;
+  font-size: 1.2em;
+}
+
+
+
+
 button.active {
 color: #646cff;
   box-shadow: 0px 2px 5px var(--box-shadow-color);
